Fixed sort icons and responsiveness on smaller screen

--- a/src/styles/playlists/playlists.scss
+++ b/src/styles/playlists/playlists.scss
@@ -6,6 +6,12 @@
 	input[type="checkbox"] {
 		border-color: $border-dark;
 	}
+
+	@include mobile {
+		.owner, .tracks {
+			display: none;
+		}
+	}
 }
 
 .playlists-compare {
